Fri Apr 17 09:53:53 MET DST 1998 hannes
 * fixed a minor but very nasty bug: nlSetMap was resetting npPrimeM
    (longrat.cc)

1998-04-16  Olaf Bachmann  <obachman@mathematik.uni-kl.de>

	* mpsr_PutPoly.cc: Took out normalization of rational numbers
	before they are put -- might have side effects

	* extra.cc: added system("--option") which returns value of
	option; in debug mode: system("OptionValues") lists all option
	values 
	
	* sing_mp.cc: use long option names for MP link options
	* MPtcp:launch: Uses find_exec as default application
	
	*  tesths.cc: New (handling of) command line options (long
	options, usage of getopt_long): Parse more than one argument
	script, etc ..
	*  added getopt.[c,h]for parsing of command lines
	
	* mod2.h.in, configure.in: Got rid off str* tests

1998-04-07  Olaf Bachmann  <obachman@mathematik.uni-kl.de>

	* mpsr_Put.cc (mpsr_PutDump): dump does not dump LIB string any more

	* extra.cc (jjSYSTEM): added System("whoami") to return full
	executable pathname of running Singular

Tue Apr  7 10:27:50 MET DST 1998 hannes
        * fixed scanner bug: ignoring { and } in <block> (scanner.l)

1998-04-06  Olaf Bachmann  <obachman@mathematik.uni-kl.de>

	* spSpolyLoop.h: neww calling interface for spGetSpolyLoop

	* kstd1.cc (kNF): moved strat->ak field initailization out of
	initBuchMora into single routines

	* febase.cc (feGetSearchPath): added feGetSearchPath; changed
	algorithm for searching files: $SINGULARPATH -> relative to
	executable -> burnt-in locations
	* added find_exec.c to get absolute pathname of executable

Mon Apr  6 14:23:52 1998  Jens Schmidt  <schmidt@mathematik.uni-kl.de>

	* claptmpl.cc: instantiation for `tabs()' added

Sat Apr  4 00:52:58 MET DST 1998 Kai Krueger <krueger@mathematik.uni-kl.de>
	* iplib.cc libparse.cc libparse.h libparse.l misc.cc LIB/*.lib
	  Changed help for libraries.
	
Wed Apr  1 20:55:15 MET DST 1998 hannes
	* mpsr_Tok.cc,tok.h: minor fix, removed VERBOSE_CMD